Fixed mobile stretch on some /create inputs

--- a/client/scripts/giftstart/create/giftstart-create-campaign.sass
+++ b/client/scripts/giftstart/create/giftstart-create-campaign.sass
@@ -67,9 +67,13 @@
         span.email
           input
             width: 23.75em
+            @media screen and (max-width: $phone-tablet-boundary)
+              width: 100%
       div.email
         input
           width: 23.75em
+          @media screen and (max-width: $phone-tablet-boundary)
+            width: 100%
 
   img.progress
     max-width: 30em
@@ -151,6 +155,8 @@
 
   input.hasDatepicker
     width: 23.75em
+    @media screen and (max-width: $phone-tablet-boundary)
+      width: 100%
   input.hasDatepicker + label
     display: inline-block
 
